# kuksa-perf

./: .pre-commit-config.yaml  CONTRIBUTING.md  Cargo.toml  README.md
.github/workflows/: check_license.yml  create_draft_release.yml  kuksa_databroker-perf_build.yml  perf-test.yml
configs/: config.json  config1.json  config2.json  config3.json
data/: data_group_1.json  data_group_10.json  data_group_2.json  data_group_3.json
data/actuators/: data_group_1.json
data/sensors/: data_group_1.json
scripts/: Dockerfile-perf  build-databroker-perf.sh  run-perf.sh
src/: config.rs  conversion.rs  main.rs  measure.rs  shutdown.rs  subscriber.rs  types.rs  utils.rs
src/providers/: mod.rs  provider_trait.rs
src/providers/kuksa_val_v1/: provider.rs
src/providers/kuksa_val_v2/: conversions.rs  mod.rs  provider.rs
src/providers/sdv_databroker_v1/: provider.rs
src/receiving_ends/: mod.rs  receiving_end_trait.rs
src/receiving_ends/kuksa_val_v1/: mod.rs  receiving_end.rs
src/receiving_ends/kuksa_val_v2/: receiving_end.rs
src/receiving_ends/sdv_databroker_v1/: receiving_end.rs
src/subscribers/: mod.rs  subscriber_trait.rs
src/subscribers/kuksa_val_v1/: subscriber.rs
src/subscribers/kuksa_val_v2/: subscriber.rs
src/subscribers/sdv_databroker_v1/: mod.rs  subscriber.rs
src/triggering_ends/: mod.rs  triggering_end_trait.rs
src/triggering_ends/kuksa_val_v1/: conversions.rs  triggering_end.rs
src/triggering_ends/kuksa_val_v2/: mod.rs  triggering_end.rs
src/triggering_ends/sdv_databroker_v1/: mod.rs  triggering_end.rs
